검색중입니다........

--- a/src/main/resources/templates/guideSelect.html
+++ b/src/main/resources/templates/guideSelect.html
@@ -3,21 +3,20 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-
 <!-- Page Content -->
 <div id="information" class="container">
 	<div id="guide">
-		<form>
+		<form>	
 			<div>
-				<input name="gsearch" id="gsearch" type="text"
-					placeholder="검색어를 입력해주세요"> <a class="btn btn-default"
-					role="button" id="gsearchbut" onclick="gsearch()">검색</a>
+				<input name="gsearch" id="gsearch" type="text" placeholder="검색어를 입력해주세요">
+				 <a class="btn btn-default" role="button" id="gsearchbut" onclick="gsearch()">검색</a> 
 			</div>
 		</form>
 		<div style="text-align: right;">
 			<a class="btn btn-default" th:href="@{/guideInsert}" role="button"
 				sec:authorize="hasRole('ROLE_ADMIN')">작성</a>
 		</div>
+		
 		<div>
 			<table class="table table-hover">
 				<thead style="text-align: center;">
@@ -27,7 +26,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="data : ${guideList}"
+					<tr th:each="data : ${searchguide}"
 						th:onclick="'window.location.href = \'' + @{/guideDetail/{g_no}(g_no=${data.guideNo})} + '\''">
 						<td th:text="${data.guideNo}"
 							style="cursor: pointer; text-align: center;"></td>
@@ -41,22 +40,23 @@
 						<td colspan="2"></td>
 					</tr>
 				</tbody>
-
+				
 			</table>
 		</div>
+		<br/><br/>
 		<div id="horsePaging" class="row justify-content-md-center-paging"
 			aria-label="Page navigation example">
 			<ul class="pagination">
 				<li class="page-item"
 					th:class="${1 == guidePagination.page} ? 'page-item disabled'">
-					<a class="page-link" th:onclick="gfirst(1)" aria-label="Previous">
+					<a class="page-link" th:onclick="gsfirst(1,[[${guidePagination.search}]])" aria-label="Previous">
 						<span aria-hidden="true">처음</span>
 				</a>
 				</li>
 				<li class="page-item"
 					th:class="${1 == guidePagination.page} ? 'page-item disabled'">
 					<a class="page-link"
-					th:onclick="gprevious([[${guidePagination.prevBlock}]])"
+					th:onclick="gsprevious([[${guidePagination.prevBlock}]],[[${guidePagination.search}]])"
 					aria-label="Previous"> <span aria-hidden="true">이전</span>
 				</a>
 				</li>
@@ -66,21 +66,21 @@
 						th:with="start = ${guidePagination.startPage}, end = ${guidePagination.endPage}"
 						th:each="pageButton : ${#numbers.sequence(start, end)}"
 						th:class="${pageButton == guidePagination.page} ? 'page-item active'">
-						<a class="page-link" th:onclick="gcurrent([[${pageButton}]])"
+						<a class="page-link" th:onclick="gscurrent([[${pageButton}]],[[${guidePagination.search}]])"
 						th:text=${pageButton} id="page"></a>
 					</li>
 				</th:block>
 				<li class="page-item"
 					th:class="${guidePagination.totalPageCnt == guidePagination.page} ? 'page-item disabled'">
 					<a class="page-link"
-					th:onclick="gnext([[${guidePagination.nextBlock}]])"
+					th:onclick="gsnext([[${guidePagination.nextBlock}]],[[${guidePagination.search}]])"
 					aria-label="Next"> <span aria-hidden="true">다음</span>
 				</a>
 				</li>
 				<li class="page-item"
 					th:class="${guidePagination.totalPageCnt == guidePagination.page} ? 'page-item disabled'">
 					<a class="page-link"
-					th:onclick="gend([[${guidePagination.totalPageCnt}]])"
+					th:onclick="gsend([[${guidePagination.totalPageCnt}]],[[${guidePagination.search}]])"
 					aria-label="Previous"> <span aria-hidden="true">끝</span>
 				</a>
 				</li>
@@ -89,3 +89,4 @@
 	</div>
 </div>
 <!-- /.container -->
+<script src="/static/js/majin.js"></script>
