--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" th:href="@{#none}">공지사항</a>
+						<li class="nav-item"><a class="nav-link" th:onclick="noticeList()">공지사항</a>
 						</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/guideList}">초보자 가이드</a>
 						</li>
