--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,5 +6,9 @@
 </head>
 <body>
 	<h1>인증을 무사히 완료하였습니다.</h1>
+	<div sec:authorize="isAuthenticated()">
+    	User: <span sec:authentication="name"></span>님 <br>
+    	Authenticated : <span sec:authentication="authorities"></span>
+	</div> 
 </body>
 </html>
