--- a/src/main/resources/templates/changepw.html
+++ b/src/main/resources/templates/changepw.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<!--<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">-->
+<html
+  lang="ko"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layout/loginlayout"
+>
 <head>
 <meta charset="UTF-8">
-<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
-<meta id="_csrf_header" name="_csrf_header"
-	th:content="${_csrf.headerName}" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<title>Title</title>
+<title>비밀번호 변경</title>
 </head>
-<body>
-	<form th:action="@{/changepw}" th:method="post">
-		<table border="1px">
-			<tr>
-				<td>현재 비밀번호</td>
-				<td><input type="text" id="oldpw" name="oldpw"></td>
-			</tr>
-			<tr>
-				<td>비밀번호</td>
-				<td><input type="password" id="pw" name="pw"></td>
-			</tr>
-			<tr>
-				<td>비밀번호 확인</td>
-				<td><input type="password" id="pwcheck" name="pwcheck"></td>
-			</tr>
-			<tr>
-				<td colspan="2" style="text-align: center;">
-					<div id="pwNotice" style="color: red">비밀번호를 입력해주세요</div>
-					<div id="pwChkNotice" style="color: red">비밀번호 확인을 입력해주세요</div>
-				</td>
-			</tr>
-			<tr>
-				<td colspan="2" style="text-align: center;"><input
-					type="submit" id="submitButton" value="비밀번호 변경"> <input
-					type="reset" value="다시입력"></td>
-			<tr>
-		</table>
-	</form>
+<main layout:fragment="content">
+	<div class="hyeok">
+	    <div class="col-4">
+            <div>
+                <div class="form-group">Margin</div>
+            </div>
+            <div>
+				<form th:action="@{/changepw}" th:method="post">
+					<div>
+						현재 비밀번호<input type="text" class="form-control form-group" id="oldpw" name="oldpw">
+					</div>
+					<div>
+						새 비밀번호<input type="password" class="form-control form-group" id="pw" name="pw">
+					</div>
+					<div>
+						새 비밀번호 확인<input type="password" class="form-control form-group" id="pwcheck" name="pwcheck">
+					</div>
+					<div style="text-align: center;">
+						<div id="pwNotice" style="color: red">비밀번호를 입력해주세요</div>
+						<div id="pwChkNotice" style="color: red">비밀번호 확인을 입력해주세요</div><br>
+					</div>
+					<div style="text-align: center;">
+						<input type="submit" id="submitButton" value="비밀번호 변경"> <input type="reset" value="다시입력">
+					</div>
+				</form>
+			</div>
+		</div>
+	</div>
 	<script src="/static/js/changecheck.js"></script>
-</body>
+</main>
 </html>
