--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,7 @@
 <title>Title</title>
 </head>
 <body>
+	<!-- 삭제 예정 페이지 -->
 	<h1>홈페이지입니다.</h1>
 	<br>
 	<a sec:authorize="isAnonymous()" th:href="@{/login}">로그인 하기</a>
