통합 작업 완료 공지사항됨 아직 수정좀더많이 해야됨

--- a/src/main/resources/templates/admin/noticeInsert.html
+++ b/src/main/resources/templates/admin/noticeInsert.html
@@ -100,7 +100,7 @@
 		
 		$("#info_chk2").click(function(){
 			oEditors.getById["content"].exec("UPDATE_CONTENTS_FIELD", []);
-			$("#guideInsertForm").submit();
+			$("#noticeInsertForm").submit();
 		});
 
 		
