--- a/src/main/resources/templates/fragments/loginheader.html
+++ b/src/main/resources/templates/fragments/loginheader.html
@@ -4,7 +4,7 @@
   	  <!-- Navigation -->
 	  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" th:href="@{/}">마진</a>
+				<a class="navbar-brand" th:href="@{/}"><img src="/static/logo/마진_투명로고_축소.png"></a>
 				<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
 					aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
