--- a/src/main/resources/templates/findpw.html
+++ b/src/main/resources/templates/findpw.html
@@ -22,5 +22,7 @@
 			<button type="submit" class="btn btn-primary">비밀번호 초기화</button>
 		</form>
 	</div>
+	<script src="/static/vendor/jquery/jquery.min.js"></script>
+	<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </main>
 </html>
