--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -14,14 +14,15 @@
 </head>
 <main layout:fragment="content">
 	<div class="hyeok">
-	    <div class="col-md-4 col-sm-4 hyeok-lg">
+	    <div class="col-4 hyeok-lg">
             <div>
-                <div class="form-group">Margin</div>
+                <div class="form-group">Margin 회원가입</div>
             </div>
             <div>
 			<form th:action="@{/signup}" th:method="post">				
 				<div>
-					아이디<input type="text" class="form-control form-group" id="id" name="id">&nbsp&nbsp<button type="button" id="chkId">아이디 체크</button>
+					아이디<input type="text" class="form-control" id="id" name="id">
+					<button type="button" class="btn btn-primary form-group" id="chkId">아이디 체크</button>
 				</div>
 				<div>
 					비밀번호<input type="password" class="form-control form-group" id="pw" name="pw">
@@ -37,16 +38,16 @@
 				</div>
 				<div>
 					이메일<br>
-					<input type="text" class="form-group mx-sm-1 mb-3" id="email" name="email">@ <select name="email" id="domain">
+					<input type="text" class="col-7" id="email" name="email"> @ <select name="email" id="domain">
 							<option value="gmail.com">gmail.com</option>
 							<option value="naver.com">naver.com</option>
 							<option value="daum.net">daum.net</option>
 							<option value="nate.com">nate.com</option>
 					</select>
-						<button type="button" id="chkEmail">인증메일 전송</button>
+						<button type="button" class="btn btn-primary form-group" id="chkEmail">인증메일 전송</button>
 				</div>
 				<div>
-					인증번호 확인<input type="text" class="form-group mx-sm-1 mb-3" id="code" name="code">&nbsp&nbsp<button type="button" id="chkCode">인증</button>
+					인증번호 확인<input type="text" class="form-control" id="code" name="code"><button type="button" class="btn btn-primary" id="chkCode">인증</button>
 				</div>
 				<div style="text-align: center;">
 					<div id="idNotice" style="color: red">아이디를 입력해 주세요</div>
@@ -59,6 +60,11 @@
 					<input type="reset" value="다시입력"></td>
 				</div>
 			</form>
+			</div>
+		</div>
+	</div>
 	<script src="/static/js/regicheck.js"></script>
+	<script src="/static/vendor/jquery/jquery.min.js"></script>
+	<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </main>
 </html>
