일단 최종본 초안(아직 예측x)

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -50,7 +50,7 @@
 			</div>
 			<div class="hak">
 			<!-- <div class="young"> -->
-				<div class="col-md-12">
+				<div class="col-12">
 					<h3 class="my-3">&nbsp&nbsp<a onclick="SearchTerms()">인기 검색어</a></h3>
 					<div class="w3-bar w3-black">
 						<button class="button3" onclick="SearchTermsHorses()" >경주마</button>
