--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,7 +24,7 @@
 						<a sec:authorize="isAnonymous()" class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 더보기 </a>
 						<a sec:authorize="isAuthenticated()" class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <span sec:authentication="name"></span>님 </a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
-							<a sec:authorize="isAnonymous()" class="dropdown-item" th:href="@{/home}">로그인</a> <!-- 로그인 하면 로그아웃으로 변경되고 회원가입이 사라지고 마이페이지 생겨야 함-->
+							<a sec:authorize="isAnonymous()" class="dropdown-item" th:href="@{/login}">로그인</a> <!-- 로그인 하면 로그아웃으로 변경되고 회원가입이 사라지고 마이페이지 생겨야 함-->
 							<a sec:authorize="isAnonymous()" class="dropdown-item" th:href="@{/signup}">회원가입</a>
 							<a sec:authorize="isAuthenticated()" class="dropdown-item" th:href="@{/logout}">로그아웃</a>
 							<a sec:authorize="isAuthenticated()" class="dropdown-item" th:href="@{/changepw}">비밀번호 변경</a>
