--- a/src/main/resources/templates/guideList.html
+++ b/src/main/resources/templates/guideList.html
@@ -8,18 +8,18 @@
 <div id="information" class="container">
 	<div id="guide">
 		<form>
-			<div>
+			<div style="display: inline-block;">
 				<input name="gsearch" id="gsearch" type="text"
 					placeholder="검색어를 입력해주세요"> 
 					<a class="btn btn-default" role="button" id="gsearchbut" onclick="guidesearch()">검색</a>
 			</div>
+			<div style="display: inline-block;">
+				<a class="btn btn-default" th:href="@{/guideInsert}" role="button"
+					sec:authorize="hasRole('ROLE_ADMIN')">작성</a>
+			</div>
 		</form>
-		<div style="text-align: right;">
-			<a class="btn btn-default" th:href="@{/guideInsert}" role="button"
-				sec:authorize="hasRole('ROLE_ADMIN')">작성</a>
-		</div>
 		<div>
-			<table class="table table-hover">
+			<table class="table table-hover" style="margin: auto;">
 				<thead style="text-align: center;">
 					<tr>
 						<th style="text-align: center;">순서</th>
@@ -36,9 +36,6 @@
 						<!-- <td th:utext="${data.content}"
 							style="cursor: pointer; text-align: center;"></td> -->
 
-					</tr>
-					<tr>
-						<td colspan="2"></td>
 					</tr>
 				</tbody>
 
