--- a/src/main/resources/templates/guideDetail.html
+++ b/src/main/resources/templates/guideDetail.html
@@ -10,7 +10,7 @@
 			<div class="col-lg-8-ex" >
 				<form role="form" th:object=${guideDto}
 					th:action="@{/guideList}" method="post">
-					 <div>
+					 <div class="">
 						<label style="font-weight: bolder;">제목</label>
 						<p th:text="${detail.title}"></p>
 						<input type="hidden" th:field="${detail.title}">
@@ -21,10 +21,10 @@
 						<span th:utext=${detail.content}></span>
 						<!-- <input type="hidden" th:field="${detail.content}"> -->
 					</div>
-					 <div style="text-align: right;">
-						<input type="submit" th:value="목록" th:formaction="@{/guideList}">
-						<input type="submit" th:value="수정" th:formaction="@{/guideUpdate/{g_no} (g_no=${detail.guideNo})}" sec:authorize="hasRole('ROLE_ADMIN')">
-						<input type="submit" th:value="삭제" th:formaction="@{/guideDelete/{g_no} (g_no=${detail.guideNo})}" sec:authorize="hasRole('ROLE_ADMIN')">
+					 <div style="text-align: center;">
+						<input class="btn-dark" type="submit" th:value="목록" th:formaction="@{/guideList}">
+						<input class="btn-dark" type="submit" th:value="수정" th:formaction="@{/guideUpdate/{g_no} (g_no=${detail.guideNo})}" sec:authorize="hasRole('ROLE_ADMIN')">
+						<input class="btn-dark" type="submit" th:value="삭제" th:formaction="@{/guideDelete/{g_no} (g_no=${detail.guideNo})}" sec:authorize="hasRole('ROLE_ADMIN')">
 					</div> 
 				</form>
 			</div>
