또시판 css수정

--- a/src/main/resources/templates/admin/guideInsert.html
+++ b/src/main/resources/templates/admin/guideInsert.html
@@ -5,7 +5,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorator="layout/layout">
 <main layout:fragment="content">
-	<div>
+	<div class="lololo">
 		<form role="form" th:object=${guideDto} th:action="@{/guideInsertProc}" method="POST" 
 			enctype="multipart/form-data" id="guideInsertForm">
 			<br />
